# luma-tools

./: .dockerignore  .env.example  .gitignore  ANALYTICS_TRACKING.md  CMakeLists.txt  Caddyfile.docker  Dockerfile  LICENSE  README.md  build.bat  build.sh  docker-compose.yml  run.bat  run.sh
.claude/: prod_proxy.py
cli/: README.md  package.json
deploy/: deploy-windows.ps1  restart.bat  status.bat  update.bat
extension/: README.md  background.js  popup.html  popup.js
public/: app.js  go.html  index.html  styles-v2.css  styles.css  sw.js
public/js/: ai-tools.js  api.js  app-shell.js  batch.js  crop.js  downloader.js  favicon-badge.js  feedback.js  file-tools.js  frame-scrubber.js  health.js  notes-extras.js  notify.js  plan-guard.js  pwa.js  redact.js  state.js  tool-page.js  tool-specs.js  tools-catalog.js  tools-misc.js  ui.js  utility-tools.js  utils.js  wasm.js  waveform.js
src/: common.cpp  common.h  discord.cpp  main.cpp  platform.cpp  routes.h  routes_account.cpp  routes_download.cpp  routes_stats.cpp  routes_tools.cpp  stats.cpp
src/headers/: common.h  discord.h  routes.h  stats.h
tools/: gen_og_image.py
